# raqm-dependencies

./: CMakeLists.txt  README.md
cmake/: RAQM-deps-macros.cmake
src/: .directory
src/freetype-2.7.1/RAQM-BUILD/: CMakeLists.txt
src/fribidi-0.19.7/RAQM-BUILD/: CMakeLists.txt
src/harfbuzz-1.2.7/: config.h
src/harfbuzz-1.2.7/RAQM-BUILD/: CMakeLists.txt
src/harfbuzz-1.2.7/win32/: config.h.win32
